--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "uglify-js": "^3.17.4"
   }
 }
