--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.22",
+    "transformers": "^3.1.0",
     "uglify-js": "^3.17.4"
   }
 }
